# Triangles_Rebellion

./: .gitignore  CMakeLists.txt  README.md  main.cpp  triangles_example.txt
.github/workflows/: project_setup.sh  regression.yml
.github/workflows/details/: github_test_summary.sh  install_deps.sh  tester_create_exe_for_ctest.sh  tester_run_ctest.sh  tester_run_gtest.sh
GEOLib/inc/: double.h  geo.h  geo_detail.hpp
GEOLib/src/: 3d.cpp  line.cpp  main.cpp
OGLLib/: CMakeLists.txt  README.md
OGLLib/details/: camera.cppm  input.cppm  render.cppm  window.cppm
examples/geo_lib/: CMakeLists.txt  intersection.cpp
examples/ogl_lib/: 1_example.cpp  2_intersections.cpp  CMakeLists.txt  example1.cpp
geo_lib/: CMakeLists.txt
geo_lib/bvh_lib/inc/: bvh.hpp
geo_lib/double_lib/inc/: double.hpp
geo_lib/geo_lib/: geo.cppm  geo.hpp  geo_comparator.cppm  geo_line.cppm  geo_point.cppm  geo_triangle.cppm  geo_vector.cppm
geo_lib/geo_lib/Line/inc/: geo_line.hpp
geo_lib/geo_lib/Point/inc/: geo_point.hpp
geo_lib/geo_lib/Triangle/inc/: geo_triangle.hpp
geo_lib/inc/: bvh.hpp
geo_lib/src/: 2d.cpp  triangle.cpp
inc/: double.h  geo.h
libs/BVH_Lib/inc/: bvh.hpp
libs/Geo_Lib/Triangle/inc/: geo_triangle.hpp
libs/Geo_Lib/Vector/inc/: geo_vector.hpp
ogl_lib/: CMakeLists.txt
ogl_lib/details/: OGLWrap.cppm  color.cppm  render.cppm  window.cppm
ogl_lib/details/oglwrap/: OGLWrap.cppm  camera.cppm  color.cppm  input.cppm  render.cppm  winConfigurator.cppm  window.cppm
ogl_lib/md_sources/html-docs/contents/: element_index.html  navigation.html
py/: plot_triangles.py
src/: 2dIntersection_Impl.cpp  3dIntersection_Impl.cpp  bvh.cpp  double.cpp  line.cpp  main.cpp  triangle.cpp
src/Geo/General/inc/: double.hpp
src/Geo/General/src/: double.cpp
src/Geo/Line/inc/: geo_line.hpp
src/Geo/Point/inc/: geo_point.hpp
src/Geo/Triangle/inc/: geo_triangle.hpp
src/Geo/Triangle/py/: plot_triangles.py
src/Geo/Triangle/tester/: tester_config.cmake
src/Geo/Triangle/tester/cmake/: gtest.cmake
src/Geo/Triangle/tests/: analyze_test.py  test_geo.cpp
src/Geo/Triangle/tests/e2e/ans/: test33.ans
src/Geo/Triangle/tests/gtest/: gtest_geo.cpp
src/Geo/Vector/inc/: geo_vector.hpp
tester/: CMakeLists.txt  tester_config.cmake
tester/cmake/: colors.cmake
tests/: CMakeLists.txt  test_geo.cpp
tests/GEOLib/e2e/: CMakeLists.txt
tests/GEOLib/gtest/: gtest_geo.cpp
tests/GEOLib/py/: plot_triangles.py
tests/GEOLib/tester/: CMakeLists.txt  tester_config.cmake
tests/GEOLib/tester/cmake/: ctest.cmake  gtest.cmake  tester_script.py
visualisation/: README.md  main.cpp  out
visualisation/OGLWrap/: OGLWrap.hpp
visualisation/OGLWrap/details/: camera.hpp  color.hpp  input.hpp  render.hpp  winConfigurator.hpp  window.hpp
visualisation/OGLWrap/glad/src/: glad.c
visualisation/glad/include/glad/: glad.h
visualisation/inc/: GLWrap.hpp
visualisation/src/: GLWrap.cpp  main.cpp
